--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Untitled Document</title>
     <link rel="stylesheet" href="css/normalize.css" type="text/css"/>
-    <link href="css/syl.css" rel="stylesheet" type="text/css" />    
+    <link href="css/syl.css" rel="stylesheet" type="text/css" />   
+    <link href="css/bootstrap.css" rel="stylehseet" type="text/css" /> 
 </head>
 
 <body>
@@ -31,31 +32,42 @@
         >
             <div class="hsContainer">
                 <div class="hsContent"
-                    data-center="bottom: 200px; opacity: 1"
-                    data-top="bottom: 1200px; opacity: 0"
-                    data-anchor-target="#slide-1 h2"
+                    data-center="opacity:1"
+                    data--200-bottom="opacity:1;"
+                    data-200-top="opacity:1;"
+                    data--50-bottom="opacity:0;"
+                    data-50-top="opacity:0;"
                 >
-                    <h2>Simple parallax scrolling is...</h2>
+                    <div class="intro green title">Hi. Hello.</div>
+                    <div class="intro white title">Nice to meet you.</div>
+                    <div class="intro white title">Kinda.</div>
                 </div>
             </div>
         </div>
     </section>
     
     <section id="slide-2" class="homeSlide">
-        <div class="bcg"
-            data-center="background-position: 50% 0px;"
-            data-top-bottom="background-position: 50% -100px;"
-            data-bottom-top="background-position: 50% 100px;"
-            data-anchor-target="#slide-2"
-        >
+        <div class="bcg">
             <div class="hsContainer">
-                <div class="hsContent"
-                    data-center="opacity: 1"
-                    data-center-top="opacity: 0"
-                    data--100-bottom="opacity: 0;"
-                    data-anchor-target="#slide-2"
-                >
-                    <h2>great for story telling websites.</h2>
+                <div class="hsContent">
+                    	<div class="left shiftdown">
+                			<img class="circle" src="pic/me.png" />
+                        </div>
+                        <div>
+                            <div class="title black intro">something about me</div>
+                            <div class="small">shitfuck</div>
+                            <div class="small black">
+                                My name is Sylvester Chiang and I am a student at Queen's University! I am   entering my fourth year in biomedical computing and your guess is as good to mine  as to what that might be good for. 
+                            </div>
+                            <div class="small black">
+                            I have strong interests in a lot of things, like coding, graphic design, healthcare, research, design, and patterned knitwear. Some people say I'm friendly, and I really enjoy learning new things. 
+                            </div>
+                            <div class="small black">
+                            If you have any questions, concerns, compliments, drop me a line. 
+                            </div>
+                    	</div>
+                    </div>
+                    </div>
                 </div>
             </div>
         </div>
