--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Untitled Document</title>
     <link rel="stylesheet" href="css/normalize.css" type="text/css"/>
     <link href="css/syl.css" rel="stylesheet" type="text/css" />   
-    <link href="css/bootstrap.css" rel="stylehseet" type="text/css" /> 
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" /> 
 </head>
 
 <body>
@@ -50,6 +50,20 @@
         <div class="bcg">
             <div class="hsContainer">
                 <div class="hsContent">
+                	<div class="row">
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+</div>
                     	<div class="left shiftdown">
                 			<img class="circle" src="pic/me.png" />
                         </div>
